--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -46,11 +46,11 @@
             };
         </script>
         <style>
-            .mono {
-                font-family: Monospace;
-                white-space: nowrap;
+            .bigip {
+                font-size: 36px;
+                color: black;
             }
-            .mono-pre {
+            .mono {
                 font-family: Monospace;
             }
         </style>
@@ -61,14 +61,14 @@
             {{#with ifconfig}}
             <div class="uk-child-width-expand@s uk-grid-match" uk-grid>
                 <div class="uk-width-1-1@s">
-                    <span class="mono uk-text-break" style="font-size: 38px; color: black">{{ ip.addr }}</span>
+                    <span class="mono bigip uk-text-break">{{ ip.addr }}</span>
                     <span class="mono">{{ host.name }}</span>
                 </div>
                 <div>
                     <h4>Location
                         {{#if location.latitude }}
                             {{# if location.longitude }}
-                                <a href="https://www.google.com/maps/place/{{ location.city }},+{{ location.country }}/@{{ location.latitude }},{{ location.longitude }},12z" uk-icon="icon:world; ratio: 0.75" title="Open Google Maps on this location." uk-tooltip></a>
+                                <a href="https://www.google.com/maps/place/{{ location.city }},+{{ location.country }}/@{{ location.latitude }},{{ location.longitude }},10z" uk-icon="icon:world; ratio: 0.75" title="Open Google Maps on this location." uk-tooltip></a>
                             {{/if}}
                         {{/if}}
                     </h4>
@@ -120,7 +120,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/", "#api-plain-root"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-root" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-root" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -129,7 +129,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/", "#api-json-root"));
                                                                 </script>
-                                                                <dd><pre id="api-json-root" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-root" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -142,7 +142,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/ip", "#api-plain-ip"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-ip" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-ip" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -151,7 +151,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/ip", "#api-json-ip"));
                                                                 </script>
-                                                                <dd><pre id="api-json-ip" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-ip" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -164,7 +164,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/tcp", "#api-plain-tcp"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-tcp" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-tcp" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -173,7 +173,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/tcp", "#api-json-tcp"));
                                                                 </script>
-                                                                <dd><pre id="api-json-tcp" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-tcp" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -186,7 +186,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/host", "#api-plain-host"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-host" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-host" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -195,7 +195,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/host", "#api-json-host"));
                                                                 </script>
-                                                                <dd><pre id="api-json-host" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-host" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -208,7 +208,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/location", "#api-plain-location"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-location" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-location" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -217,7 +217,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/location", "#api-json-location"));
                                                                 </script>
-                                                                <dd><pre id="api-json-location" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-location" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -230,7 +230,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/isp", "#api-plain-isp"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-isp" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-isp" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -239,7 +239,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/isp", "#api-json-isp"));
                                                                 </script>
-                                                                <dd><pre id="api-json-isp" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-isp" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -252,7 +252,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_plain("/user_agent", "#api-plain-user_agent"));
                                                                 </script>
-                                                                <dd><pre id="api-plain-user_agent" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-plain-user_agent" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                         <li>
@@ -261,7 +261,7 @@
                                                                 <script>
                                                                     $(document).ready(get_ifconfig_json("/user_agent", "#api-json-user_agent"));
                                                                 </script>
-                                                                <dd><pre id="api-json-user_agent" class="mono-pre"></pre></dd>
+                                                                <dd><pre id="api-json-user_agent" class="mono"></pre></dd>
                                                             </dl>
                                                         </li>
                                                     </ul>
@@ -281,7 +281,7 @@
                                             <dl class="uk-description-list">
                                                 <dt>curl</dt>
                                                 <dd>
-<pre class="mono-pre">> curl {{ base_url }}{{ uri }}
+<pre class="mono">> curl {{ base_url }}{{ uri }}
     {{ ifconfig.ip.addr }}</pre>
                                                 </dd>
                                             </dl>
@@ -292,7 +292,7 @@
                                             <dl class="uk-description-list">
                                                 <dt>wget</dt>
                                                 <dd>
-<pre class="mono-pre">> wget -qO - {{ base_url }}{{ uri }}
+<pre class="mono">> wget -qO - {{ base_url }}{{ uri }}
     {{ ifconfig.ip.addr }}</pre>
                                                 </dd>
                                             </dl>
@@ -303,7 +303,7 @@
                                             <dl class="uk-description-list">
                                                 <dt>httpie</dt>
                                                 <dd>
-<pre class="mono-pre">> http -b {{ base_url }}{{ uri }}
+<pre class="mono">> http -b {{ base_url }}{{ uri }}
     {{ ifconfig.ip.addr }}</pre>
                                                 </dd>
                                             </dl>
@@ -314,7 +314,7 @@
                                             <dl class="uk-description-list">
                                                 <dt>fetch</dt>
                                                 <dd>
-<pre class="mono-pre">> fetch -qo- {{ base_url }}{{ uri }}
+<pre class="mono">> fetch -qo- {{ base_url }}{{ uri }}
     {{ ifconfig.ip.addr }}</pre>
                                                 </dd>
                                             </dl>
@@ -328,7 +328,7 @@
                                                     <script>
                                                         $(document).ready(get_ifconfig_json("/", "#cli-curl-json-slash"));
                                                     </script>
-                                                    <pre class="mono-pre" id="cli-curl-json-slash">> curl -H "Accept: application/json" {{ base_url }}{{ uri }}
+                                                    <pre class="mono" id="cli-curl-json-slash">> curl -H "Accept: application/json" {{ base_url }}{{ uri }}
 </pre>
                                                 </dd>
                                             </dl>
