--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -101,7 +101,7 @@
                                                 i.e., <span class="mono">Accept: application/json</span>. <em>{{ pkg_name }}</em>
                                                 tries to identify whether a request is sent by CLI client and then only sends the
                                                 resource's base information. In this way for example, a simple <span class="mono">
-                                            curl {{ base_url }}{{ uri }}</span> retrieves your IP address. For any other browser
+                                                curl {{ base_url }}{{ uri }}</span> retrieves your IP address. For any other browser
                                                 <em>{{ pkg_name }}</em> returns this beautiful HTML page you're currently looking at.
                                             </p>
                                             <ul uk-tab>
@@ -281,10 +281,10 @@
                                     <div class="uk-width-1-2@s">
                                         <div>
                                             <dl class="uk-description-list">
-                                                <dt>curl</dt>
+                                                <dt>curl</dt><script>$(document).ready(get_ifconfig_plain("/", "#cli-curl-root"));</script>
                                                 <dd>
-<pre class="mono">> curl {{ base_url }}{{ uri }}
-    {{ ifconfig.ip.addr }}</pre>
+                                                    <pre id="cli-curl-root" class="mono">> curl {{ base_url }}{{ uri }}
+</pre>
                                                 </dd>
                                             </dl>
                                         </div>
@@ -292,10 +292,10 @@
                                     <div class="uk-width-1-2@s">
                                         <div>
                                             <dl class="uk-description-list">
-                                                <dt>wget</dt>
+                                                <dt>wget</dt><script>$(document).ready(get_ifconfig_plain("/tcp", "#cli-curl-tcp"));</script>
                                                 <dd>
-<pre class="mono">> wget -qO - {{ base_url }}{{ uri }}
-    {{ ifconfig.ip.addr }}</pre>
+                                                    <pre id="cli-curl-tcp" class="mono">> wget -qO - {{ base_url }}{{ uri }}tcp
+</pre>
                                                 </dd>
                                             </dl>
                                         </div>
@@ -303,10 +303,10 @@
                                     <div class="uk-width-1-2@s">
                                         <div>
                                             <dl class="uk-description-list">
-                                                <dt>httpie</dt>
+                                                <dt>httpie</dt><script>$(document).ready(get_ifconfig_plain("/tcp", "#cli-curl-host"));</script>
                                                 <dd>
-<pre class="mono">> http -b {{ base_url }}{{ uri }}
-    {{ ifconfig.ip.addr }}</pre>
+                                                    <pre id="cli-curl-host" class="mono">> http -b {{ base_url }}{{ uri }}host
+</pre>
                                                 </dd>
                                             </dl>
                                         </div>
@@ -314,10 +314,10 @@
                                     <div class="uk-width-1-2@s">
                                         <div>
                                             <dl class="uk-description-list">
-                                                <dt>fetch</dt>
+                                                <dt>fetch</dt><script>$(document).ready(get_ifconfig_plain("/location", "#cli-curl-location"));</script>
                                                 <dd>
-<pre class="mono">> fetch -qo- {{ base_url }}{{ uri }}
-    {{ ifconfig.ip.addr }}</pre>
+                                                    <pre id="cli-curl-location" class="mono">> fetch -qo- {{ base_url }}{{ uri }}location
+</pre>
                                                 </dd>
                                             </dl>
                                         </div>
@@ -325,11 +325,8 @@
                                     <div class="uk-width-1-2@s">
                                         <div>
                                             <dl class="uk-description-list">
-                                                <dt>curl for Json</dt>
+                                                <dt>curl for Json</dt><script>$(document).ready(get_ifconfig_json("/", "#cli-curl-json-slash"));</script>
                                                 <dd>
-                                                    <script>
-                                                        $(document).ready(get_ifconfig_json("/", "#cli-curl-json-slash"));
-                                                    </script>
                                                     <pre class="mono" id="cli-curl-json-slash">> curl -H "Accept: application/json" {{ base_url }}{{ uri }}
 </pre>
                                                 </dd>
