--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -96,13 +96,15 @@
                                 <div class="uk-grid-match uk-grid-small" uk-grid>
                                     <div class="uk-width-1-1@s">
                                         <div>
-                                            <p>Every resource supports plain as well as JSON GET requests. JSON responses can be
-                                                requested by setting the corresponding <span class="mono">Accept</span> header,
-                                                i.e., <span class="mono">Accept: application/json</span>. <em>{{ pkg_name }}</em>
-                                                tries to identify whether a request is sent by CLI client and then only sends the
-                                                resource's base information. In this way for example, a simple <span class="mono">
-                                                curl {{ base_url }}{{ uri }}</span> retrieves your IP address. For any other browser
-                                                <em>{{ pkg_name }}</em> returns this beautiful HTML page you're currently looking at.
+                                            <p>
+                                            Every resource supports plain as well as JSON GET requests. JSON responses can be
+                                            requested by setting the corresponding <span class="mono">Accept</span> header,
+                                            i.e., <span class="mono">Accept: application/json</span>. <em>{{ pkg_name }}</em>
+                                            tries to identify whether a request is sent by CLI client and then only returns the
+                                            plain response unless JSON is explicitly requested. In this way for example,
+                                            a simple <span class="mono"> curl {{ base_url }}{{ uri }}</span> retrieves
+                                            your IP address. You can also add <span class="mono">"/json"</span> to any
+                                            resource to force a JSON response regardless of the Accept header.
                                             </p>
                                             <ul uk-tab>
                                                 <li class="uk-active"><a href="#"><span class="mono">/</span></a></li>
@@ -404,10 +406,16 @@
             <div class="uk-width-1-1@s uk-margin-small-bottom">
                 <div class="uk-text-small">
                     <em>{{ pkg_name }}</em> is yet another
-                    <a class="uk-link-text" href="https://www.google.com/search?q=what's+my+ip+address">"what's my IP address"</a>
-                    service, currently running version {{ version }}. Feel free to use it as much as you like to, to query it
-                    automatically, and to clone and to fork it. Please mind that rate limiting may be applied. If you like to,
-                    you can contact me on
+                    <a href="https://www.google.com/search?q=what's+my+ip+address">"what's my IP address"</a>
+                    service, currently running version {{ version }}. It is written in
+                    <a href="https://www.rust-lang.org/">
+                    Rust</a> (hence the .rs top-level domain) using the
+                    <a href="https://rocket.rs">Rocket</a> web framework and includes GeoLite2 data
+                    created by MaxMind, available from
+                    <a href="http://www.maxmind.com">http://www.maxmind.com</a>. The UI is made with
+                    <a href="https://getuikit.com">uikit</a>. Feel free to use it as much as you
+                    like to query it automatically, and to clone and to fork it. Please mind that rate limiting may be
+                    applied. If you like to, you can contact me on
                     <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github; ratio: 0.5"></a> and
                     <a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter; ratio: 0.5"></a>.
                 </div>
