Add postcardware hint to FAQ

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -382,14 +382,19 @@
                                             <dl class="uk-description-list">
                                                 <dt>Can I run my own instance of <em>{{ pkg_name }}</em>?</dt>
                                                 <dd>
-                                                    Yes please, you're welcome to. Just clone of fork the
+                                                    Yes please, you're welcome to. Just clone or fork the
                                                     <a href="https://github.com/lukaspustina/ifconfig-rs">GitHub repository</a>.
+                                                    If you find it useful for your purpose, I would highly appreciate you
+                                                    sending me a postcard from your hometown mentioning how you use <em>
+                                                    {{ pkg_name }}</em>. Please see the project's
+                                                    <a href="https://github.com/lukaspustina/ifconfig-rs">Readme</a> in the
+                                                    GitHub repository for details.
                                                 </dd>
                                             </dl>
                                             <dl class="uk-description-list">
                                                 <dt>Can you add &lt;feature&gt;, please?</dt>
                                                 <dd>
-                                                    Yes, of course. Just contact me and let's discuss the details. Better, do
+                                                    Yes, why not. Just contact me and let's discuss the details. Better, do
                                                     it yourself and send me a pull request.
                                                 </dd>
                                             </dl>
@@ -412,8 +417,8 @@
                     created by MaxMind, available from
                     <a href="http://www.maxmind.com">http://www.maxmind.com</a>. The UI is made with
                     <a href="https://getuikit.com">uikit</a>. Feel free to use it as much as you
-                    like to query it automatically, and to clone and to fork it. Please mind that rate limiting may be
-                    applied. If you like to, you can contact me on
+                    like, to query it automatically, and to clone and to fork it. Please mind that rate limiting may be
+                    applied. If you like to get in touch, you can contact <a href="https://about.me/lukas.pustina">me</a> on
                     <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github; ratio: 0.5"></a> and
                     <a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter; ratio: 0.5"></a>.
                 </div>
