--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="description" content="Yet another ifconfig / what's my IP service">
-        <meta name="keywords" content="what's my ip,ifconfig,ip address,json">
+        <meta name="keywords" content="what's my ip,ifconfig,ip address,json,api">
         <meta name="author" content="Lukas Pustina">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>ifconfig.rs</title>
+        <title>{{ project.name }}</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/css/uikit.min.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
