--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -375,22 +375,13 @@
                                             <dl class="uk-description-list">
                                                 <dt>Where is <em>{{ project.name }}</em> hosted?</dt>
                                                 <dd>
-                                                    The code runs on a free <a href="https://heroku.com">Heroku</a> Autoscaling
-                                                    Dnyo that powers down when there are no service accesses for a period of
-                                                    time. This may lead to a large delay for the first request triggering a
-                                                    service restart.
+                                                    The code runs on a free <a href="https://koyeb.com">Heroku</a>.
                                                 </dd>
                                             </dl>
                                             <dl class="uk-description-list">
                                                 <dt>Does <em>{{ project.name }}</em> support IPv6?</dt>
                                                 <dd>
-                                                    Currently, no. Even though the code is agnostic regarding the IP version,
-                                                    <a href="https://heroku.com">Heroku</a> currently does not support IPv6, so
-                                                    <em>{{ project.name }}</em> is only available for IPv4. You can run your own
-                                                    instance of <em>{{ project.name }}</em> at another, IPv6 supporting provider.
-                                                    Please see the project's
-                                                    <a href="https://github.com/lukaspustina/ifconfig-rs">Readme</a> in the
-                                                    GitHub repository for details.
+                                                    Yes, the code is agnostic regarding the IP version.
                                                 </dd>
                                             </dl>
                                             <dl class="uk-description-list">
@@ -434,7 +425,7 @@
                     <a href="http://www.maxmind.com">http://www.maxmind.com</a>. The UI is made with
                     <a href="https://getuikit.com">uikit</a>. Feel free to use it as much as you
                     like, to query it automatically, and to clone and to fork it. Please mind that rate limiting may be
-                    applied. If you like to get in touch, you can contact <a href="https://about.me/lukas.pustina">me</a> on
+                    applied. If you like to get in touch, you can contact <a href="https://lukas.pustina.de">me</a> on
                     <a href="https://github.com/lukaspustina/ifconfig-rs" uk-icon="icon:github; ratio: 0.5"></a> and
                     <a href="https://twitter.com/drivebytesting" uk-icon="icon:twitter; ratio: 0.5"></a>.
                 </div>
