--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -375,7 +375,7 @@
                                             <dl class="uk-description-list">
                                                 <dt>Where is <em>{{ project.name }}</em> hosted?</dt>
                                                 <dd>
-                                                    The code runs on a free <a href="https://koyeb.com">Heroku</a>.
+                                                    The code runs for free at <a href="https://koyeb.com">Koyeb</a>.
                                                 </dd>
                                             </dl>
                                             <dl class="uk-description-list">
